// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(0,30,43,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(0,30,43,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-4 {
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  position: relative;
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  z-index: 0;
}

.emotion-5 {
  margin: 24px 0;
}

table .emotion-5 {
  margin: 0;
}

.emotion-6 * {
  border: 0!important;
  min-height: unset!important;
  padding: 0!important;
}

.emotion-7 {
  width: 5%;
}

.emotion-7 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-8 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  padding-right: 4px;
  color: #1C2D38;
}

.emotion-11 {
  width: 10%;
}

.emotion-11 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-15 {
  width: 15%;
}

.emotion-15 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-19 {
  width: 20%;
}

.emotion-19 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-23 {
  width: 30%;
}

.emotion-23 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-31 {
  --lg-cell-min-height: 20px;
  position: relative;
  z-index: 1;
  background-color: #FFFFFF;
  color: #1C2D38;
}

.emotion-31>:is(td, th)>[data-leafygreen-ui="td-inner-div"] {
  min-height: var(--lg-cell-min-height);
  max-height: unset;
}

.emotion-31>:is(td, th):nth-child(1) {
  padding-left: 8px;
}

.emotion-31 :is(td, th):nth-child(1)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-31 :is(td, th):nth-child(2)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-31 :is(td, th):nth-child(3)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-31 :is(td, th):nth-child(4)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-31 :is(td, th):nth-child(5)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-31 :is(td, th):nth-child(6)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-32 {
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-32 * {
  font-size: 13px!important;
}

.emotion-32>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-32>div>span {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-32>div>span>*,
.emotion-32>div>span p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-32>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-33 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4 emotion-5"
      >
        <thead>
          <tr
            class="emotion-6"
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-7 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-11 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-15 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-19 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-23 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-19 emotion-8"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-9"
              >
                <span
                  class="emotion-10"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-31"
            role="row"
          >
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-35"
                >
                  notebook
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-35"
                >
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-35"
                >
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-35"
                >
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-35"
                >
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-32 emotion-33"
            >
              <div
                class="emotion-34"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-35"
                >
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(0,30,43,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(0,30,43,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-4 {
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  position: relative;
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  z-index: 0;
}

.emotion-5 {
  margin: 24px 0;
}

table .emotion-5 {
  margin: 0;
}

.emotion-6 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-7 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  padding-right: 4px;
  color: #1C2D38;
}

.emotion-30 {
  --lg-cell-min-height: 20px;
  position: relative;
  z-index: 1;
  background-color: #FFFFFF;
  color: #1C2D38;
}

.emotion-30>:is(td, th)>[data-leafygreen-ui="td-inner-div"] {
  min-height: var(--lg-cell-min-height);
  max-height: unset;
}

.emotion-30>:is(td, th):nth-child(1) {
  padding-left: 8px;
}

.emotion-30 :is(td, th):nth-child(1)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-30 :is(td, th):nth-child(2)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-30 :is(td, th):nth-child(3)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-30 :is(td, th):nth-child(4)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-30 :is(td, th):nth-child(5)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-30 :is(td, th):nth-child(6)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-31 {
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  background-color: #F9FBFA;
}

.emotion-31 * {
  font-size: 13px!important;
}

.emotion-31>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-31>div>span {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-31>div>span>*,
.emotion-31>div>span p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-31>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-32 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  font-weight: 600;
  border-right: 3px solid #E8EDEB;
  background-color: #F9FBFA;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 {
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-35 * {
  font-size: 13px!important;
}

.emotion-35>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-35>div>span {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-35>div>span>*,
.emotion-35>div>span p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-35>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-36 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4 emotion-5"
      >
        <thead>
          <tr
            class=""
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  name
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  quantity
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  size
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  status
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  tags
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-6 emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  rating
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  journal
                </span>
              </div>
            </th>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  25
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  14x21,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  brown, lined
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  9
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  notebook
                </span>
              </div>
            </th>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  8
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  paper
                </span>
              </div>
            </th>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  100
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  watercolor
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  planner
                </span>
              </div>
            </th>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  75
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  22.85x30,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  2019
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-30"
            role="row"
          >
            <th
              class="emotion-31 emotion-32"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  postcard
                </span>
              </div>
            </th>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  45
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  10x,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  double-sided,white
                </span>
              </div>
            </td>
            <td
              class="emotion-35 emotion-36"
            >
              <div
                class="emotion-33"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-34"
                >
                  2
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
